# DSA

./: .gitignore  Algorithms.h  CMakeLists.txt  main.cpp
DSA2/HW1/: A. Depth-first search.cpp  B. Connected components.cpp  C. Cheating.cpp  D. Cycle detection.cpp  E. Which vertices can reach the first vertex.cpp  F. Subtree sizes.cpp  G. Transport system optimization.cpp  H. Room area.cpp  I. Byte Radio.cpp  J. Landing troops.cpp
DSA2/HW2/: A. Topological sort.cpp  B. Bridges.cpp  C. Articulation points.cpp  D. Graph сondensation.cpp  E. One-Way traffic.cpp  F. Parts production.cpp  G. Apple from the apple tree.cpp  H. Study groups in Mahovniki.cpp  I. City in the republic.cpp  J. Prime Minister.cpp
DSA2/HW3/: A. Shortest path length.cpp  B. Path in a graph.cpp  C. Spelunker's path.cpp  D. Fleas.cpp  E. Redundant edges.cpp  F. Metro.cpp  G. Toy maze.cpp  H. Max and pourings.cpp  I. Tsar Leonid on a tractor.cpp  J. Robots.cpp
DSA2/HW4/: A. Dijkstra.cpp  B. Dijkstra with path reconstruction.cpp  C. Fast Dijkstra.cpp  D. Shortest path.cpp  E. Alchemy Olympiad.cpp  F. Buses in Vasyuki.cpp  G. Riding City.cpp  H. Transportation.cpp  I. By Sled.cpp  J. File manager.cpp
DSA2/HW5/: A. Transitive Closure.cpp  B. Is there a cycle?.cpp  C. Floyd.cpp  D. Dangerous Route.cpp  E. The Longest Path.cpp  F. Pink Floyd.cpp  G. Ford-Bellman.cpp  H. Timed Flights.cpp  I. Negative Weight Cycle.cpp  J. Labyrinth of Knowledge.cpp
